recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:19: error: reassignment to val
levels=levels-1;
      ^SquareKoch:20: error: reassignment to val
length=length/2;
      ^