recursion.lessons.recursion.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
while(levels>=1)
{
snowSquare(levels, length);
levels=levels-1;
length=length/2;
}
}
